Update app source code
App code for release v0.3

--- a/BOB/contact.html
+++ b/BOB/contact.html
@@ -15,12 +15,13 @@
 		<script src='js/bootstrap.min.js'></script>
 	</head>
 	
-	<body>
+	<body class="contact-background">
 		<div class='row row-bottom-margin navbar navbar-inverse navbar-static-top navbar-custom'>
 			<div class='container'>
 				<div class='navbar-header'>
 					<a href='index.html' class='navbar-brand'>
-						Boulders Draft List
+					<img src="images/boblogo.png" alt="logo" />
+						Draft List
 					</a> 
 					
 					<button type='button' class='navbar-toggle' 
@@ -32,13 +33,25 @@
 					</button>
 				</div>
 				<ul class='nav navbar-nav navbar-right collapse navbar-collapse'>
-					<li><a href='events.html'>Upcoming Events</a></li>
 					<li><a href='contact.html'>Contact Us</a></li>
+					<li><a href='events.html'>Upcoming Events</a></li>
 				</ul>
 			</div>
 		</div>
 		
-		<h1>Contact information will go here.</h1>
+		<h4>Contact Info</h4>
+		<p>530 W Broadway</p>
+		<p>Tempe, AZ  85282</p>
+		<p>480-921-9431</p>
+		<p>info@bouldersonbroadway.com</p>
+		
+		<h4>Hours of Operation</h4>
+		<p>Open Daily 11AM - 2AM</p>
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6661.
+		1764090255865!2d-111.95088579953446!3d33.4079060720401!2m3!1f0!2f0!3f0!3m2
+		!1i1024!2i768!4f13.1!3m3!1m2!1s0x872b08cbed9417d5%3A0xd7285eee578d5108!2s530
+		+W+Broadway+Rd%2C+Tempe%2C+AZ+85282!5e0!3m2!1sen!2sus!4v1446141346615" 
+		width="395" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
 	
 	</body>
 	
