--- a/BOB/events.html
+++ b/BOB/events.html
@@ -15,13 +15,14 @@
 		<script src='js/bootstrap.min.js'></script>
 	</head>
 	
-	<body>
+	<body class="contact-background">
 		<div class='row row-bottom-margin navbar navbar-inverse navbar-static-top navbar-custom'>
 			<div class='container'>
 				<div class='navbar-header'>
 					<a href='index.html' class='navbar-brand'>
-						Boulders Draft List
-					</a> 
+					<img src="images/boblogo.png" alt="logo" />
+						Draft List
+					</a>
 					
 					<button type='button' class='navbar-toggle' 
 						data-toggle='collapse' data-target='.navbar-collapse'>
