--- a/BOB/contact.html
+++ b/BOB/contact.html
@@ -33,8 +33,8 @@
 					</button>
 				</div>
 				<ul class='nav navbar-nav navbar-right collapse navbar-collapse'>
+					<li><a href='http://bouldersonbroadway.com/events' target='_blank'>Upcoming Events</a></li>
 					<li><a href='contact.html'>Contact Us</a></li>
-					<li><a href='events.html'>Upcoming Events</a></li>
 				</ul>
 			</div>
 		</div>
@@ -51,7 +51,7 @@
 		1764090255865!2d-111.95088579953446!3d33.4079060720401!2m3!1f0!2f0!3f0!3m2
 		!1i1024!2i768!4f13.1!3m3!1m2!1s0x872b08cbed9417d5%3A0xd7285eee578d5108!2s530
 		+W+Broadway+Rd%2C+Tempe%2C+AZ+85282!5e0!3m2!1sen!2sus!4v1446141346615" 
-		width="395" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+		width="380" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
 	
 	</body>
 	
